[tool.poetry]
name = "spectrumcgm"
version = "0.1.0"
description = "connect your cgm to a smart light"
authors = ["Glen Rubin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
